simplify excluding heart